[fix]: [CDS-73981]: put validation on tag expression values in filters while saving pipeline - 2